[project]
name = "conventional-commitizen"
version = "0.1.0"
description = "A combination of two awesome commit linting tools written in python."
readme = "README.md"
authors = [
    { name = "Luke Nonas-Hunter", email = "luke@nonas-hunter.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
docs = [
    "mike>=2.1.3",
    "mkdocs-coverage>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.16.11",
    "pymdown-extensions>=10.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
conventional-commitizen = "conventional_commitizen:main"

[project.entry-points."conventional-commitizen.parsers"]
generic = "conventional_commitizen.parsers:GenericParser"


[tool.ruff.lint]
select = ["E", "F", "B", "I", "D", "N", "DOC", "W", "ANN", "PL"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 80

[tool.ruff]
preview = true
line-length = 80
